index.css
/* ... */
.items-banner {
  border: 4px solid rgb(63, 63, 63);
  background-image: url("./images/Banners/items-banner.jpg");
  overflow: hidden;
  background-size: cover;
  background-position: 50% 48%;
  height: 12em;
  margin: 2em auto 0 auto;
}

.items-banner:hover {
  transform: scale(1.03, 1.03);
}

/* =================================================================================
====================================================================================
[Inner Grid, Spells Section] */

.spell-title {
  font-size: 2em;
  text-shadow: -4px 0 black, 0 4px black, 4px 0 black, 0 -4px black;
  color: #fff;
}

.spells-banner {
  border: 4px solid rgb(63, 63, 63);
  background-image: url("./images/Banners/SpellBanner.jpg");
  overflow: hidden;
  background-size: cover;
  background-position: 50% 35%;
  height: 12em;
  margin: 2em auto 2em auto;
}

.spells-banner:hover {
  transform: scale(1.03, 1.03);
}

/* =================================================================================
====================================================================================
[Inner Grid Div, Searchbars] */

.search {
  width: 30%;
  height: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.searchbar {
  border: 2px solid #f33201;
  border-radius: 5px 0 0 5px;
  outline: none;
  color: #000;
}

.search-btn:hover,
.search-btn:active {
  background-color: #ff4617;
}

.search-btn {
  width: 100%;
  height: 85%;
  background-image: url(images/Icons/search-icon.png);
  overflow: hidden;
  background-size: 90% 90%;
  border: 1px solid #f33201;
  background-color: #f33201;
  border-radius: 0 5px 5px 0;
}

.list-btn {
  border-radius: 5px;
  background-color: #f33201;
  border: 1px solid #f33201;
  font-size: 1em;
  color: #fff;
  font-weight: bold;
}

/* =================================================================================
==================================================================================== 
[Media Queries] */

@media (max-width: 414px) {
  h1 {
    font-size: 1.2em;
  }

  .titles {
    font-size: 1.5em;
  }

  .row > div[class^="col"] {
    font-weight: bold;
    font-size: 1em;
  }

  .class-btns {
    height: 4em;
    width: 4em;
  }

  .race-btns {
    height: 5em;
    width: 4em;
  }

  .race-specs,
  .race-stats {
    margin: 20px 20px 20px 20px;
    padding: 0;
    max-width: 100%;
    min-width: 300px;
  }

  .monster-title {
    font-size: 1.5em;
    text-shadow: -4px 0 black, 0 4px black, 4px 0 black, 0 -4px black;
    color: #fff;
  }

  .item-title {
    font-size: 1.4em;
    text-shadow: -4px 0 black, 0 4px black, 4px 0 black, 0 -4px black;
    color: #fff;
  }

  .spell-title {
    font-size: 1.5em;
    text-shadow: -4px 0 black, 0 4px black, 4px 0 black, 0 -4px black;
    color: #fff;
  }
}

@media (min-width: 415px) and (max-width: 768px) {
  .class-subs,
  .class-profs,
  .class-equips {
  }
}

/* =================================================================================
==================================================================================== 
[Class Icon Button Images] */
.barbarian-icon {
  background-image: url("./images/Class-Icons/barbarian-icon.jpeg");
  background-size: 100% 100%;
}

.bard-icon {
  background-image: url("./images/Class-Icons/bard-icon.jpeg");
  background-size: 100% 100%;
}

.cleric-icon {
  background-image: url("./images/Class-Icons/cleric-icon.jpeg");
  background-size: 100% 100%;
}

.druid-icon {
  background-image: url("./images/Class-Icons/druid-icon.jpeg");
  background-size: 100% 100%;
}

.fighter-icon {
  background-image: url("./images/Class-Icons/fighter-icon.jpeg");
  background-size: 100% 100%;
}

.monk-icon {
  background-image: url("./images/Class-Icons/monk-icon.jpeg");
  background-size: 100% 100%;
}

.paladin-icon {
  background-image: url("./images/Class-Icons/paladin-icon.jpeg");
  background-size: 100% 100%;
}

.ranger-icon {
  background-image: url("./images/Class-Icons/ranger-icon.jpeg");
  background-size: 100% 100%;
}

.rogue-icon {
  background-image: url("./images/Class-Icons/rogue-icon.jpeg");
  background-size: 100% 100%;
}

.sorcerer-icon {
  background-image: url("./images/Class-Icons/sorcerer-icon.jpeg");
  background-size: 100% 100%;
}

.warlock-icon {
  background-image: url("./images/Class-Icons/warlock-icon.jpeg");
  background-size: 100% 100%;
}

.wizard-icon {
  background-image: url("./images/Class-Icons/wizard-icon.jpeg");
  background-size: 100% 100%;
}

/* =================================================================================
====================================================================================
[Races Icon Images] */
.dragonborn-icon {
  background-image: url("./images/Race-Images/dragonborn.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.dwarf-icon {
  background-image: url("./images/Race-Images/dwarf.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.elf-icon {
  background-image: url("./images/Race-Images/elf.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.gnome-icon {
  background-image: url("./images/Race-Images/gnome.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.half-elf-icon {
  background-image: url("./images/Race-Images/half-elf.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.half-orc-icon {
  background-image: url("./images/Race-Images/half-orc.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.halfling-icon {
  background-image: url("./images/Race-Images/halfling.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.human-icon {
  background-image: url("./images/Race-Images/human.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.tiefling-icon {
  background-image: url("./images/Race-Images/tiefling.png");
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

